# M3P2-LABinventory-BackEnd-Squad2

./: .env-example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci-pr.yml  deploy-gcp.yml  main.yml
src/app/: __init__.py
src/app/config/: __init__.py
src/app/controllers/: collaborator.py  comment.py  inventory.py  item.py  movie.py  user.py
src/app/middlewares/: auth.py  collabs.py  items.py
src/app/models/: collaborators.py  comments.py  items.py  movies.py  users.py
src/app/routes/: __init__.py
src/app/swagger/: __init__.py
src/app/utils/: __init__.py  client_secret.json  client_secret.json.old
tests/: conftest.py  test_devinhouse_pymongo.py
tests/collabs/: test_create_employees.py  test_get_employees.py
tests/inventory/: test_get_inventory_analytics.py
tests/items/: test_create_item.py  test_get_inventory.py
tests/users/: test_create_user.py  test_login.py  test_login_google.py
